--- a/src/mail/templates/newsletterSubscribedNotify.hbs
+++ b/src/mail/templates/newsletterSubscribedNotify.hbs
@@ -79,7 +79,7 @@
                 <a href="{{unsubscribeUrl}}" class="button unsubscribe">Unsubscribe</a>
             </div>
             <p>Best regards,</p>
-            <p>Zenith Super Car Rental</p>
+            <p>Nest Fastify</p>
         </div>
     </div>
 </body>
