--- a/src/mail/templates/newsletterUnsubscribeNotify.hbs
+++ b/src/mail/templates/newsletterUnsubscribeNotify.hbs
@@ -49,7 +49,7 @@
         <div class="footer">
             <p>Thank you for being a part of our community.</p>
             <p>Best regards,</p>
-            <p>Zenith Super Car Rental</p>
+            <p>Nest Fastify</p>
         </div>
     </div>
 </body>
