--- a/src/mail/templates/sendNewsletterSubscribeLink.hbs
+++ b/src/mail/templates/sendNewsletterSubscribeLink.hbs
@@ -71,7 +71,7 @@
         <div class="footer">
             <p>If you did not request this email, please ignore it.</p>
             <p>Best regards,</p>
-            <p>Zenith Super Car Rental</p>
+            <p>Nest Fastify</p>
         </div>
     </div>
 </body>
